--- a/styles.css
+++ b/styles.css
@@ -32,15 +32,180 @@
 }*/
 
 /*********** 5 ***********/
-input:checked {
+/* input:checked {
     width: 20px;
     height: 20px;
-}
+} */
 
 /*********** 6 ***********/
+/* input {
+    font-size: 1rem;
+}
+input::placeholder {
+    color: goldenrod;
+} */
 
 /*********** 7 ***********/
+/* p::before {
+    content: "==> ";
+    color: deeppink;
+}
+p::after {
+    content: " <==";
+    color: deeppink;
+} */
 
 /*********** 8 ***********/
+/* p::before {
+    content: "";
+    display: block;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: peachpuff;
+    margin: 8px;
+} */
 
 /*********** 9 ***********/
+/* nav a {
+    color: red;
+    font-weight: bold;
+} */
+
+/*********** 10 ***********/
+/* nav a {
+    color: red;
+    font-weight: bold;
+} */
+
+/*********** 11 ***********/
+/* li {
+    margin-bottom: 8px;
+}
+
+.main-list > li {
+    border: 2px dotted;
+} */
+
+/*********** 12 ***********/
+/* li {
+    margin-bottom: 8px;
+}
+
+.main-list  li {
+    border: 2px dotted;
+} */
+
+/*********** 13 ***********/
+
+/* article a {
+    color: deeppink;
+    text-decoration: none;
+}
+article a:hover {
+    text-decoration: underline;
+}
+
+aside a {
+    color: black;
+}
+
+aside a:hover {
+    text-decoration: none;
+} */
+
+/*********** 14 ***********/
+/* .box {
+    margin: 0 auto;
+    width: 300px;
+    height: 300px;
+    background-color: hsl(181deg, 64%, 45%);
+    box-shadow: 1px 2px 10px hsl(181deg, 64%, 45%);
+} */
+
+/*********** 15 ***********/
+/* .box {
+  width: 50px;
+  height: 50px;
+}
+.first {
+  background-color: hsl(340, 100%, 50%,1);
+}
+.second {
+  background-color: hsla(340deg, 100%, 50%,0.75);
+}
+.third {
+  background-color: hsla(340deg, 100%, 50%,0.5);
+}
+.fourth {
+  background-color: hsla(340deg, 100%, 50%,0.25);
+} */
+
+/*********** 16 ***********/
+/* em {
+    background-color: hsl(50deg, 100%, 50%);
+} */
+
+/*********** 17 ***********/
+/* p {
+    font-size: 18px;
+    padding-bottom: 2em;
+    border: 1px solid;
+} */
+
+/*********** 18 ***********/
+/* p {
+    font-size: 50px;
+} */
+
+/*********** 19 ***********/
+/* html {
+    font-size: 1.2em;
+}
+h1 {
+    font-size: 2rem;
+    margin: 0;
+}
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 5rem;
+    color: gray;
+}
+
+p {
+    font-size: 1rem;
+} */
+
+/*********** 20 ***********/
+/* .box {
+    width: 350px;
+    height: 200px;
+    background-color: palevioletred;
+}
+.child {
+    width: 60%;
+    height: 40%;
+    background-color: black;
+} */
+
+/*********** 21 ***********/
+
+/*********** 22 ***********/
+
+/*********** 23 ***********/
+
+/*********** 24 ***********/
+
+/*********** 25 ***********/
+
+/*********** 26 ***********/
+
+/*********** 27 ***********/
+
+/*********** 28 ***********/
+
+/*********** 29 ***********/
+
+/*********** 30 ***********/
+
+/*********** 25 ***********/
