--- a/styles.css
+++ b/styles.css
@@ -232,15 +232,34 @@ section {
 } */
 
 /*********** 25 ***********/
-.box {
-    border: 2px solid;
+/* .box {
+    border: 2px solid; */
     /* padding-top: 25%; */
-    padding-top: 25px;
-}
+    /* padding-top: 25px;
+} */
 
 /*********** 26 ***********/
+/* .box {
+    width: 100px;
+    height: 100px;
+    border: 2px solid deeppink;
+    border-radius: 20px 5px 15px 60px; */
+
+    /* border-top-left-radius: 20px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 60px; */
+/* } */
 
 /*********** 27 ***********/
+.outline-offset {
+    margin: 50px auto;
+    width: 100px;
+    height: 100px;
+    border: 4px solid darkcyan;
+    outline: 4px solid currentColor;
+    outline-offset: 5px;
+}
 
 /*********** 28 ***********/
 
